# franka-bimanual

./: CLAUDE.md  README.md  pyproject.toml
frames/camera/: camera_calibration.py  matrices.txt
home_poses/: home_pose.json
lerobot_camera_arv/lerobot_camera_arv.egg-info/: PKG-INFO
lerobot_camera_framos/: pyproject.toml
lerobot_camera_framos/lerobot_camera_framos/: framos.py
lerobot_camera_framos/lerobot_camera_framos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lerobot_robot_bimanual_franka/: pyproject.toml
lerobot_robot_bimanual_franka/lerobot_robot_bimanual_franka/: bimanual_franka.py  bimanual_franka_config.py  config_single_arm_franka.py  franka_fk.py  franka_gripper.py  franka_process.py  safety.py  wsg.py
lerobot_robot_bimanual_franka/lerobot_robot_bimanual_franka.egg-info/: PKG-INFO  requires.txt
lerobot_robot_envframe_franka/: README.md  __init__.py
lerobot_robot_envframe_franka/lerobot_robot_envframe_franka/: __init__.py  envframe_franka.py  envframe_franka_config.py  franka_link.py
lerobot_robot_envframe_franka/lerobot_robot_envframe_franka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lerobot_teleoperator_gello/lerobot_teleoperator_gello/: gello.py
lerobot_teleoperator_spacemouse/lerobot_teleoperator_spacemouse/: config_bimanual_spacemouse.py  config_spacemouse.py  spacemouse.py
residual_wrapper/: env_wrapper.py  policy_wrapper.py
scripts/: circle_trajectory.py  ee_record_data.sh  home.py  home.sh  lerobot_record_homed_single_arm.py  local_module_check.sh  record_data.sh  replay.sh  rollout_no_data.sh  rollout_policy.sh  single_arm_rollout_policy_homed.sh  single_arm_teleop.sh  spacemouse_teleop.py  spacemouse_teleop.sh  teleop.sh  train.sh  visualize_episode.py
scripts/calibration/: README.md  calib_common.py  camera_calibration.py  plot_world_frame.py  wrist_handeye.py
scripts/calibration/results/: scene_left_0.json  scene_right_0.json  wrist_left_plus.json  wrist_right_minus.json
scripts/misc/: capture_framos.py  env_jog.py  gello_ee_teleop.sh  local_module_check.sh  observe_jp.py  openpi_client_franka.py  single_arm_teleop.sh  spacemouse_probe.py  spacemouse_teleop.sh  strip_depth.py  teleop.sh  train.sh  visualize_episode.py
scripts/testing/: cam_match.py  real_robot_server.py  real_robot_server.sh  real_vs_sim_rollout.py  real_vs_sim_rollout.sh
src/lerobot_camera_arv/: pyproject.toml
src/lerobot_camera_arv/lerobot_camera_arv/: arv.py
src/lerobot_camera_arv/lerobot_camera_arv.egg-info/: SOURCES.txt  requires.txt
src/lerobot_camera_framos/lerobot_camera_framos/: config_framos.py  framos.py
src/lerobot_robot_bimanual_franka/lerobot_robot_bimanual_franka/: __init__.py  bimanual_franka.py  bimanual_franka_config.py  franka_process.py
src/lerobot_robot_envframe_franka/: pyproject.toml
src/lerobot_robot_envframe_franka/lerobot_robot_envframe_franka/: __init__.py  actions.py  diffik.py  envframe_franka.py  envframe_franka_config.py  franka_jacobian.py  franka_link.py
src/lerobot_robot_envframe_franka/lerobot_robot_envframe_franka.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lerobot_teleoperator_gello/lerobot_teleoperator_gello/: bimanual_gello.py  franka_fk.py
src/lerobot_teleoperator_spacemouse/lerobot_teleoperator_spacemouse/: bimanual_spacemouse.py
